[package]
name = "http-status-print"
version = "0.1.3"
authors = ["Noah Pendleton"]
description = "Utility to print explanatory information for http status codes"
homepage = "https://github.com/noahp/http-status-print"
repository = "https://github.com/noahp/http-status-print.git"
license = "MIT"
readme = "README.md"

[dependencies]
clap = "2.32"
http = "0.1.19"
human-panic = "1.0.1"

[profile.release]
lto = true
panic = 'abort'
